force-app/main/default/objects/OneCRM__Relationship_Settings__c/fields/OneCRM__DISABLE_DeleteEmptyRelationships__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__DISABLE_DeleteEmptyRelationships__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISABLE_DeleteEmptyRelationships</label>
    <type>Checkbox</type>
</CustomField>