force-app/main/default/objects/OneCRM__Relationship_Settings__c/fields/OneCRM__DISABLE_Relationships_trigger__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__DISABLE_Relationships_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DISABLES the Relationships.trigger (Relationship__c, before insert, before update, before delete, after insert, after update, after delete, after undelete)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your org.  FOR ADVANCED CONSULTANT AND DEVELOPERS ONLY.</description>
    <inlineHelpText>DISABLES the Relationships.trigger (Relationship__c, before insert, before update, before delete, after insert, after update, after delete, after undelete)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in y</inlineHelpText>
    <label>DISABLE_Relationships_trigger</label>
    <type>Checkbox</type>
</CustomField>