force-app/main/default/objects/OneCRM__Relationship_Settings__c/fields/OneCRM__Gender_Field__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Gender_Field__c</fullName>
    <defaultValue>&quot;gender__c&quot;</defaultValue>
    <description>The custom field used to define the gender of a Contact for determining reciprocal relationships</description>
    <inlineHelpText>The custom field used to define the gender of a Contact for determining reciprocal relationships</inlineHelpText>
    <label>Gender Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>